adding sonar properties file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,7 @@
-addressbook:
-   build: . 
-   ports:
-     - '9090:8080'
+version: '2'
+
+services:
+  addressbook:
+    build: . 
+    ports:
+      - '90900:8080'
